--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wpazderski/wallets-client",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "description": "A web application for secure management of investment information",
     "author": "Witold Pazderski",
     "license": "MIT",
@@ -12,6 +12,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.2.0",
         "@fortawesome/free-regular-svg-icons": "^6.2.0",
         "@fortawesome/free-solid-svg-icons": "^6.2.0",
+        "@fortawesome/free-solid-svg-icons-lazy": "npm:@fortawesome/free-solid-svg-icons@^6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@mui/material": "^5.10.11",
         "@mui/x-data-grid": "^5.17.9",
@@ -45,6 +46,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "analyze-build": "source-map-explorer 'build/static/js/*.js'",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -68,5 +70,8 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "https://localhost:17467"
+    "proxy": "https://localhost:17467",
+    "devDependencies": {
+        "source-map-explorer": "^2.5.3"
+    }
 }
