--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
         "country-flag-icons": "^1.5.5",
         "i18next": "^22.0.3",
         "i18next-browser-languagedetector": "^7.0.0",
+        "jest": "^27.5.1",
+        "jest-puppeteer": "^6.2.0",
         "moment": "^2.29.4",
+        "puppeteer": "^18.1.0",
         "react": "^18.2.0",
         "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
@@ -49,7 +52,9 @@
         "analyze-build": "source-map-explorer 'build/static/js/*.js'",
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test-dev": "cross-env TEST_ENV=development react-scripts test --runInBand --watchAll=false",
+        "test-watch": "cross-env TEST_ENV=development react-scripts test --runInBand --watchAll",
+        "test": "cross-env TEST_ENV=production react-scripts test --runInBand --watchAll=false",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -72,6 +77,7 @@
     },
     "proxy": "https://localhost:17467",
     "devDependencies": {
+        "cross-env": "^7.0.3",
         "source-map-explorer": "^2.5.3"
     }
 }
